# QuickRes

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  main.cc
.github/workflows/: cmake-single-platform.yml  release.yml
